--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@
     font-weight: bold;
     text-align: center;
 }
+
+.citation {
+    color: blue;
+    font-weight: lighter;
+    text-align: center;
+}
